# redes-neurais

./: README.md  gans_utils.py  main.py  pyproject.toml  requirements.txt  secao_backpropagation.py  secao_cnn.py  secao_gans.py  secao_introducao.py  secao_mlp_acao.py  secao_perceptron.py  secao_playground.py  secao_redes_neurais.py  secao_rnn.py  secao_transformers.py  visualizacoes.py
